--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					}
 					read+=str.charAt(i);
 				}
-				switch (read){
+				switch (read.toLowerCase()){
 					case "say":
 						for (let i=4; i<str.length; i++){
 							prs+=str.charAt(i);
