--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 				input.style.top = parseInt(input.style.top)+18;
 			}
 		</script>
+		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body onload="OnStart()">
 		<p style="position:absolute; left:350px; top:30px; font-size:30px;">S-COM SOFTWARE 1.3</p>
