--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
 				font-family: "Courier";
 				font-size: 15px;
 				font-weight: bold;
-				width: 75%;
+				width: 60%;
+			}
+			
+			button {
+				border-radius: 2px;
+				background-color: #212121;
+				color: #fff;
+				outline: none;
+				font-family: "Courier";
+				font-size: 15px;
+				font-weight: bold;
+				border-style: solid;
+			}
+			button:hover {
+				background-color: #808080;
+			}
+			button:active {
+				background-color: #909090;
 			}
 			
 			.info {
@@ -65,6 +82,7 @@
 "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 		</script> 
 		<script>
+			console.log(localStorage);
 			function OnStart(){
 				var input = document.getElementById("console_input");
 				var enter = document.getElementById("console_enter");
@@ -129,11 +147,17 @@
 				document.body.appendChild(line);
 				input.style.top = parseInt(input.style.top)+18;
 			}
+			
+			function Exit(){
+				document.write();
+				close();
+			}
 		</script>
 		<link rel="shortcut icon" href="favicon.png">
 	</head>
 	<body onload="OnStart()">
 		<p style="position:absolute; left:350px; top:30px; font-size:30px;">S-COM SOFTWARE 1.3</p>
+		<div align=RIGHT style="margin-right:128px;"><button onclick="Exit()" style="position:absolute; top:36px; font-size:30px; width:129; height:52;">EXIT</button></div>
 		<div class="info" style="position:absolute; left:23px; top:204px;">
 			<p>Encryption</p>
 			<p style="margin-left: 36px">AES-256 CTR</p>
