--- a/s-messenger.html
+++ b/s-messenger.html
@@ -261,6 +261,7 @@
 				}
 			}
 		</script>
+		<link rel="shortcut icon" href="favicon.png">
 	</head>
 	<body onload = "Start()" onbeforeunload="End()" >
 		<div id="servers" style="opacity: 0; position: absolute; width:100%; top:10%;">
