--- a/s-messenger.html
+++ b/s-messenger.html
@@ -136,6 +136,7 @@
 				var msgBody = document.createElement("div");
 				var msg = document.createElement("div");
 				var msgImg = document.createElement("img");
+				msgImg.src = src;
 				var msgSender = document.createElement("p");
 				if(sender === 'client'){
 					msg.style.background = "#191919";
