--- a/s-messenger.html
+++ b/s-messenger.html
@@ -137,6 +137,7 @@
 				var msg = document.createElement("div");
 				var msgImg = document.createElement("img");
 				msgImg.src = src;
+				msgImg.style["max-width"] = "100%";
 				var msgSender = document.createElement("p");
 				if(sender === 'client'){
 					msg.style.background = "#191919";
