--- a/s-messenger.html
+++ b/s-messenger.html
@@ -174,6 +174,9 @@
 				var msg = document.createElement("div");
 				var msgText = document.createTextNode(text);
 				var msgSender = document.createElement("p");
+				msg.style["overflow-wrap"] = "break-word";
+				msg.style["word-wrap"] = "break-word";
+				msg.style["hyphens"] = "auto";
 				if(sender === 'client'){
 					msg.style.background = "#191919";
 					msg.style.padding = 14;
