--- a/s-messenger.html
+++ b/s-messenger.html
@@ -317,6 +317,7 @@
 							}
 							break;
 						case 'check':
+							Message('server', username, '0');
 							SendMessage('message', 'server', username);
 							break;
 					}
