--- a/s-messenger.html
+++ b/s-messenger.html
@@ -307,7 +307,7 @@
 					msgSender.align = "LEFT";
 				}
 				msgBody.className = "chatMessage";
-				msgBody.onclick = function(){
+				msg.onclick = function(){
 					lastElement = this;
 					ClearDropDowns();
 					var dropdown = document.createElement("div");
