--- a/s-messenger.html
+++ b/s-messenger.html
@@ -390,10 +390,15 @@
 				msg.appendChild(msgText);
 				msgText.innerText = msgText.innerText.replace(/(\[img\])/g, "<img style='max-width: 100%' src='");
 				msgText.innerText = msgText.innerText.replace(/(\[\/img\])/g, "'>");
+				msgText.innerText = msgText.innerText.replace(/(\[vid\])/g, "<video controls autoplay style='max-width: 100%'><source src='");
+				msgText.innerText = msgText.innerText.replace(/(\[\/vid\])/g, "'></video>");
+				msgText.innerText = msgText.innerText.replace(/(\[aud\])/g, "<audio controls autoplay style='max-width: 100%'><source src='");
+				msgText.innerText = msgText.innerText.replace(/(\[\/aud\])/g, "'></audio>");
 				msgText.innerHTML = msgText.innerText;
-				
+				//<button style='font-size: 48px; color: #fff; background: #000;' onclick='ClearDropDowns();'>▶</button>
 				msgText.innerHTML = msgText.innerHTML.replace(/(\[i\])/g, '<i>');
 				msgText.innerHTML = msgText.innerHTML.replace(/(\[\/i\])/g, '</i>');
+				msgText.innerHTML = msgText.innerHTML.replace(/(\[n\])/g, '<br>');
 				msgText.innerHTML = msgText.innerHTML.replace(/(\[u\])/g, '<u>');
 				msgText.innerHTML = msgText.innerHTML.replace(/(\[\/u\])/g, '</u>');
 				msgText.innerHTML = msgText.innerHTML.replace(/(\[quote\])/g, '<blockquote style="background: #444; padding: 8px; margin: 4px; border-left-style: solid; ">');
