--- a/s-messenger.html
+++ b/s-messenger.html
@@ -109,7 +109,7 @@
 			var connected = false;
 			var lastElement;
 			var suggestcur = -1;
-			var cmds = ["/clr", "/check", "/disconnect", "/username (str)/ch"];
+			var cmds = ["/clr", "/check", "/disconnect", "/username (str)"];
 			var cmdsEl = [];
 			var bbs = ["[aud]", "[i]", "[img]", "[n]", "[quote]", "[u]"];
 			var bbsEl = [];
